request #11444: Tracker CSS is not correctly loaded on BurningParrot pages
Also, the toggler on cardwall cards is broken on BP pages.

--- a/plugins/tracker/www/themes/default/css/includes/_cards.scss
+++ b/plugins/tracker/www/themes/default/css/includes/_cards.scss
@@ -1,5 +1,5 @@
 /**
- * Copyright (c) Enalean, 2012 - 2017. All Rights Reserved.
+ * Copyright (c) Enalean, 2012 - 2018. All Rights Reserved.
  *
  * This file is a part of Tuleap.
  *
@@ -99,6 +99,15 @@
         background-image: none;
         color: #808080;
         font-size: .9em;
+    }
+
+    .toggler,
+    .toggler-noajax,
+    .toggler-hide,
+    .toggler-hide-noajax {
+        &::before {
+            content: '';
+        }
     }
 
     > .toggler:hover,
